2009-09-03  John W. Eaton  <jwe@octave.org>

	* configure.in (AH_BOTTOM): If HAVE_Z is defined, define HAVE_ZLIB.

2009-09-03  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-09-02  Jaroslav Hajek  <highegg@gmail.com>

	* configure.in (FLOAT_TRUNCATE): New config macro.

2009-09-02  Jaroslav Hajek  <highegg@gmail.com>

	* acx_blas_f77_func.m4 (ACX_BLAS_F77_FUNC): Check for correct INTEGER
	size.

2009-09-01  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_REQUIRE_64_BIT_FORTRAN_INTEGERS): New macro.
	* configure.in: Use it, if building with --enable-64.
	Move checks for Fortran compiler ahead of checks for libraries.

2009-09-01  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-08-30  Jaroslav Hajek  <highegg@gmail.com>

	* NEWS: Update.

2009-08-27  John W. Eaton  <jwe@octave.org>

	* configure.in: Properly save and restore CPPFLAGS and LIBS when
	checking for GraphicsMagick++.  Don't temporarily change LDFLAGS.

2009-08-27  Jaroslav Hajek  <highegg@gmail.com>

	* aclocal.m4 (m4_ifblank, m4_ifnblank): State FSF copyright and markup
	as FIXME.

2009-08-26  John W. Eaton  <jwe@octave.org>

	* configure.in: Restore LIBS after checking for ARPACK.

2009-08-26  John W. Eaton  <jwe@octave.org>

	* configure.in: Use OCTAVE_CHECK_LIBRARY to check for UMFPACK.
	* octave-bug.in, octave-bug.cc.in: Substitute UMFPACK_CPPFLAGS and
	UMFPACK_LDFLAGS.
	* Makeconf.in (UMFPACK_CPPFLAGS, UMFPACK_LDFLAGS): New variables.
	(do-subst-config-vals): Substitute them.

2009-08-26  John W. Eaton  <jwe@octave.org>

	* configure.in: Use OCTAVE_CHECK_LIBRARY to check for qrupdate.
	* octave-bug.in, octave-bug.cc.in: Substitute QRUPDATE_CPPFLAGS and
	QRUPDATE_LDFLAGS.
	* Makeconf.in (QRUPDATE_CPPFLAGS, QRUPDATE_LDFLAGS): New variables.
	(do-subst-config-vals): Substitute them.

2009-08-26  John W. Eaton  <jwe@octave.org>

	* octave-bug.in: Correct substitutions.

2009-08-26  John W. Eaton  <jwe@octave.org>
